<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TTibir</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email address</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">SIGN UP!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup_error_message">Please make sure you enter all 3 fields</string>
    <string name="signup_error_title">0ops!</string>
    <string name="login_error_message">Please make sure you enter username and password</string>
    <string name="login_error_title">0ops!</string>
    <string name="empty_inbox_label">No new messages.</string>
    <string name="empty_friends_label">No friends.</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_edit_friends_label">Edit friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">Sorry Oops Oops</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing the device\'s external storage</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large! Select another one!</string>

    <string-array name="camera_choices">

        <item>Take picture</item>
        <item>Take video</item>
        <item>Choose picture</item>
        <item>Choose video</item>

    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the selected file. Please select a different one</string>
    <string name="error_selecting_file_title">Sorry, something went wrong</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">Error sending message. Please try again</string>
    <string name="pizdamatii">PULAMEA</string>
    <string name="title_activity_view_image">TTibir</string>
    <string name="asd">watt</string>
    <string name="content_desc_background">TTibir frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="push_message">You have a new message from %s!</string>
    <string name="menu_text_label">Text</string>

    <string name="title_activity_view_text_message">New message</string>

</resources>
