<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="antton.paul.ttibir.SignUpActivity"
    style="@style/AuthBackground"
    >


    <ImageView
        android:id="@+id/backgroundImage"
        style = "@style/AuthBackgroundImage"
        />

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitle"
        style="@style/AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

    <EditText

        android:id="@+id/usernameField"
        android:hint="@string/username_hint"
        style="@style/AuthEditText"
        />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        style="@style/AuthEditText"
        />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailField"
        style="@style/AuthEditText"
        android:hint="@string/email_hint"
        />

    </LinearLayout>




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"
        />

    <Button
        android:id="@+id/signUpButton"
        android:text="@string/sign_up_text"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        />


    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        />


</RelativeLayout>
